--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@babel/plugin-transform-class-properties": "^7.20.0",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.20.0",
+    "@babel/plugin-transform-numeric-separator": "^7.20.0",
+    "@babel/plugin-transform-optional-chaining": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.20.0",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@svgr/webpack": "^8.1.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/type-utils": "^5.62.0",
+    "@typescript-eslint/utils": "^5.62.0",
+    "eslint": "^8.0.0",
+    "firebase": "^10.0.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/plugin-svgo": "^8.1.0"
   }
 }
