--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/datastore": "^5.0.64",
+    "@aws-amplify/storage": "^6.7.3",
+    "@aws-amplify/ui-react": "^6.7.1",
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-class-properties": "^7.20.0",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.20.0",
@@ -15,6 +18,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@typescript-eslint/type-utils": "^5.62.0",
     "@typescript-eslint/utils": "^5.62.0",
+    "aws-amplify": "^6.10.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -31,7 +35,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "firebase": "^10.0.0",
+    "firebase": "^10.14.1",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -59,30 +63,30 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "web-vitals": "^4.2.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "overrides": {
-  "braces": "^3.0.3",
-  "micromatch": "^4.0.4",
-  "anymatch": "^3.0.5",
-  "chokidar": "^3.5.3",
-  "readdirp": "^3.6.0"
-},
-"resolutions": {
-  "braces": "^3.0.3",
-  "micromatch": "^4.0.4",
-  "anymatch": "^3.0.5",
-  "chokidar": "^3.5.3",
-  "readdirp": "^3.6.0"
-},
+    "braces": "^3.0.3",
+    "micromatch": "^4.0.4",
+    "anymatch": "^3.0.5",
+    "chokidar": "^3.5.3",
+    "readdirp": "^3.6.0"
+  },
+  "resolutions": {
+    "braces": "^3.0.3",
+    "micromatch": "^4.0.4",
+    "anymatch": "^3.0.5",
+    "chokidar": "^3.5.3",
+    "readdirp": "^3.6.0"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
-	"start": "http-server ./public"
   },
   "eslintConfig": {
     "extends": [
