--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^7.0.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "rimraf": "^6.0.1",
