--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/api": "^4.0.0",
-    "@aws-amplify/api-graphql": "^2.0.0",
+    "@aws-amplify/api": "^6.1.7",
+    "@aws-amplify/api-graphql": "^4.6.5",
+    "@aws-amplify/auth": "^6.8.2",
+    "@aws-amplify/core": "^6.7.2",
     "@aws-amplify/datastore": "^5.0.64",
     "@aws-amplify/storage": "^6.7.3",
     "@aws-amplify/ui-react": "^6.7.1",
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-class-properties": "^7.20.0",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.20.0",
     "@babel/plugin-transform-numeric-separator": "^7.20.0",
-    "@babel/plugin-transform-optional-chaining": "^7.20.0",
     "@babel/plugin-transform-private-methods": "^7.20.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@rollup/plugin-terser": "^0.4.0",
@@ -167,6 +167,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@testing-library/jest-dom": "^6.6.3",
     "webpack-dev-server": "^4.15.2"
   }
